tests/should_pass/select_cap.fit
capability Fs
capability Read

fn read_file(path: String) using Read -> String

fn process(path: String) using Fs -> String {
    select Read from Fs
    read_file(path)
}
