tests/should_fail/missing_cap.fit
capability ChargeCard

fn charge(amount: Cents) using ChargeCard -> Receipt

fn pay(amount: Cents) -> Receipt {
    charge(amount)
}
